--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "crypto": "^1.0.1",
     "jsonwebtoken": "^8.5.1",
     "koa": "^2.12.0",
-    "koa-body": "^4.1.3",
+    "koa-bodyparser": "^4.3.0",
     "koa-passport": "^4.1.3",
     "koa-router": "^9.0.1",
     "migrate-mongoose": "^4.0.0",
