--- a/package.json
+++ b/package.json
@@ -28,5 +28,10 @@
     "mongoose": "^5.9.18",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0"
+  },
+  "devDependencies": {
+    "mocha": "^7.2.0",
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0"
   }
 }
